파트너쉽 반응형 수정

--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,7 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 
 /*****OUR PRODUCTS*****/
 .products-in {height: 100vh;}
-.products .panel-top {position: absolute; top:20vh; left:50%; transform: translateX(-50%); z-index: 1;}
+.products .panel-top {position: absolute; top:20vh; left:25%; transform: translateX(-50%); z-index: 1;}
 .products .products-cont {height: 100%;}
 .products .products-cont ul {display: flex; height: 100%;}
 .products .products-cont ul li {position: relative; width: 50%; height: 100%; overflow: hidden; transition: .3s all ease;}
@@ -1036,6 +1036,12 @@ footer .copyright span {margin:5px 10px 5px 0;}
     /*****PARTNERSHIP*****/
     .partnership-in {padding: 80px 0;}
     .partnership-cont li {flex: 1 1 52%;}
+    .partnership-cont li:nth-child(1) {border: 1px solid #1D2E45;}
+    .partnership-cont li:nth-child(2) {border: 1px solid #009892;}
+    .partnership-cont li:nth-child(3) {border: 1px solid #E40214;}
+    .partnership-cont li:nth-child(4) {border: 1px solid #0075CB;}
+    .partnership-cont li:nth-child(5) {border: 1px solid #0A127F;}
+    .partnership-cont li:nth-child(6) {border: 1px solid #488AAD;}
 
     /*****LOCATION*****/
     .location-in {padding: 80px 0;}
